--- a/avito/pro-fe-trainee-task/src/index.css
+++ b/avito/pro-fe-trainee-task/src/index.css
@@ -1,12 +1,14 @@
 body {
   margin: 0;
-  font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
+  font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-body, html {
+body,
+html {
   height: 100%;
 }
 
