--- a/avito/safedeal-frontend-trainee/src/index.css
+++ b/avito/safedeal-frontend-trainee/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: "Roboto Condensed", "Lucida Sans Unicode", "Lucida Grande", sans-serif;
@@ -5,7 +9,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body, html {
+body,
+html {
   height: 100%;
 }
 
